# Metroidvania

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompletedTasks.md  ImplementationPlan.md  ReadMe.md  architecture.md
assets/shaders/: blit.frag  blit.vert  flat.frag  flat.vert  lighting.glsl  text.frag  text.vert  textured.frag  textured.vert  vertcolor.frag  vertcolor.vert
docs/: GameObjects.md  Map.md  Physics.md
maps/: MainWorld.world.world.json  Overworld.json  README.md  world_01.json  world_02.json  world_03.json
src/: main.cpp
src/Components/: AnimationComponent.cpp  AnimationComponent.h  CombatComponent.cpp  CombatComponent.h  EnemyAIComponent.cpp  EnemyAIComponent.h  HealthComponent.cpp  HealthComponent.h  InputComponent.cpp  InputComponent.h  LightComponent.cpp  LightComponent.h  MovementComponent.cpp  MovementComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h  SlimeAttackComponent.cpp  SlimeAttackComponent.h
src/Core/: Ability.h  Component.h  GameObject.cpp  GameObject.h  InputBindings.cpp  InputBindings.h  PlayerState.h  SaveSystem.cpp  SaveSystem.h
src/Debug/: DebugMenu.cpp  DebugMenu.h
src/Input/: GLFWInput.cpp  GLFWInput.h  InputSystem.h  InputTypes.h  SFMLInput.cpp  SFMLInput.h
src/Map/: AbilityPickupDefinition.h  EnemyDefinition.h  LightDefinition.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  Platform.h  TransitionManager.cpp  TransitionManager.h  TransitionZone.h
src/Math/: Types.h
src/Physics/: PhysXWorld.cpp  PhysXWorld.h
src/Rendering/: GLRenderer.cpp  GLRenderer.h  Light.h  Renderer.h  SFMLRenderer.cpp  SFMLRenderer.h  Shader.cpp  Shader.h  VmaImpl.cpp  VulkanRenderer.cpp  VulkanRenderer.h
src/UI/: ControlsMenu.cpp  ControlsMenu.h  PauseMenu.cpp  PauseMenu.h  RoundedRectangleShape.h  SaveSlotScreen.cpp  SaveSlotScreen.h  UIStyle.h
tests/: test_transitions.cpp
tools/: generate_armor_sprites.py  run-tasks.ps1
tools/MapEditor/: MainForm.cs  MapCanvas.cs  MapEditor.csproj  Models.cs  Program.cs  TransitionGenerator.cs
